[package]
name = "roblox_inventory_scanner"
version = "0.2.3"
authors = ["tornadus <33427110+tornadus@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.1.0", features = ["full"] }
futures = "0.3.12"
text_io = "0.1.8"
dont_disappear = "3.0.1"
